# huffman

./: CMakeLists.txt  README.md  huffman.cpp  huffman.h  utility.cpp
test/: buffer  empty_with_enter  encode_test  homework  mars  output  palata6  random  testing_huffman.cpp
